--- a/styles/main-style.css
+++ b/styles/main-style.css
@@ -9,19 +9,19 @@ body {
 }
 
 .navbar a {
-    float: right;
+    float: left;
     color: #f2f2f2;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-size: 16px;
+    font-size: 20px;
 }
 
-.topnav a:hover {
+.navbar a:hover {
     background-color: #8fcce5;
     color: #151c21;
 }
 
-.topnav a.active {
+.navbar a.active {
     background-color: #35729e;
 }
