--- a/styles/main-style.css
+++ b/styles/main-style.css
@@ -1,6 +1,7 @@
 
 body {
     margin: 0;
+    user-select: none;
 }
 
 .navbar {
@@ -12,7 +13,7 @@ body {
     float: left;
     color: #f2f2f2;
     text-align: center;
-    padding: 14px 16px;
+    padding: 22px 20px;
     text-decoration: none;
     font-size: 20px;
 }
